--- a/SBOMSystemMockup/Pages/PartsList.razor
+++ b/SBOMSystemMockup/Pages/PartsList.razor
@@ -139,6 +139,7 @@
             </div>
             <button class="btn btn-outline-secondary btn-compact" @onclick="TogglePartsDisplay">部品表示</button>
             <button class="btn btn-primary btn-compact" @onclick="@(() => NavTo($"/machine/{MachineId}/partsfetch"))">部品情報取得画面を開く</button>
+            <button class="btn btn-warning btn-compact" @onclick="@(() => NavTo($"/machine/{MachineId}/partschange"))">部品変更画面を開く</button>
             <button class="btn btn-primary btn-compact" @onclick="@(() => NavTo($"/machine/{MachineId}/setedit"))">セット品登録編集画面を開く</button>
             <button class="btn btn-secondary btn-compact" @onclick="@(() => Nav.NavigateTo($"/machine/{MachineId}"))">閉じる</button>
         </div>
